--- a/groupsite/home.html
+++ b/groupsite/home.html
@@ -117,7 +117,7 @@
                   <li><a href="home.html">Home</a>
                   <li><a href="buy.html">Buy</a>
                   <li><a href="sell/sell.html">Sell</a>
-                  <li><a href="#">Contact Us</a></li>
+                  <li><a href="contact/contact.html" onclick="openPopup(event)">Contact Us</a>
                </ul>
             </div>
             <div class="column company-name">
