--- a/groupsite/basket.html
+++ b/groupsite/basket.html
@@ -105,9 +105,9 @@
               </td>
               <td>£12.00</td>
               <td>
-                <input type="number" value="1" min="1" data-price="12.99" />
+                <input type="number" value="1" min="1" data-price="12.00" />
               </td>
-              <td class="item-subtotal"></td>
+              <td class="item-subtotal">£12.00</td>
             </tr>
             <tr>
               <td>
@@ -126,9 +126,9 @@
               </td>
               <td>£15.00</td>
               <td>
-                <input type="number" value="1" min="1" data-price="21.99" />
+                <input type="number" value="1" min="1" data-price="£15.00" />
               </td>
-              <td class="item-subtotal"></td>
+              <td class="item-subtotal">£15.00</td>
             </tr>
           </tbody>
           <tfoot>
