--- a/groupsite/buy.html
+++ b/groupsite/buy.html
@@ -166,6 +166,7 @@
           </div>
         </div>
       </div>
+      <p>Image 'A little piece of desk' by Davide Boscolo, 2019, free stock photo licensed under the </p>
     </footer>
   </body>
 </html>
