added image contributors

--- a/groupsite/buy.html
+++ b/groupsite/buy.html
@@ -147,6 +147,7 @@
             <li><a class="active" href="#buy">Buy</a></li>
             <li><a href="sell/sell.html">Sell</a></li>
             <li><a href="contact/contact.html" onclick="openPopup(event)">Contact Us</a>
+            </li>
           </ul>
         </div>
         <div class="column company-name">
@@ -165,8 +166,63 @@
             </div>
           </div>
         </div>
+        <div class="contributors">
+          <p>
+            Image 'A little piece of desk' by Davide Boscolo, 2019, free stock
+            photo licensed under the
+            <a href="https://unsplash.com/license">Unsplash License</a>.
+            Downloaded from
+            <a href="https://unsplash.com/photos/gz9njd0zYbQ"
+              >https://unsplash.com/photos/gz9njd0zYbQ</a
+            >
+          </p>
+          <p>
+            Image 'Filed four books' by Hope House Press - Leather Diary Studio,
+            2016, free stock photo licensed under the
+            <a href="https://unsplash.com/license">Unsplash License</a>.
+            Downloaded from
+            <a href="https://unsplash.com/photos/IOzk8YKDhYg"
+              >https://unsplash.com/photos/IOzk8YKDhYg</a
+            >
+          </p>
+          <p>
+            Image 'Women's four assorted apparel hanged on clothes rack' by
+            Alexandra Gorn, 2017, free stock photo licensed under the
+            <a href="https://unsplash.com/license">Unsplash License</a>.
+            Downloaded from
+            <a href="https://unsplash.com/photos/WF0LSThlRmw"
+              >https://unsplash.com/photos/WF0LSThlRmw</a
+            >
+          </p>
+          <p>
+            Image 'Black and white drawstring pouch' by Erica Steeves, 2020,
+            free stock photo licensed under the
+            <a href="https://unsplash.com/license">Unsplash License</a>.
+            Downloaded from
+            <a href="https://unsplash.com/photos/PfQh55R0ZtE"
+              >https://unsplash.com/photos/PfQh55R0ZtE</a
+            >
+          </p>
+          <p>
+            Image 'White printer paper beside magnifying glass' by Artboard
+            Studio, 2021, free stock photo licensed under the
+            <a href="https://unsplash.com/license">Unsplash License</a>.
+            Downloaded from
+            <a href="https://unsplash.com/photos/c-KRSHct7Ho"
+              >https://unsplash.com/photos/c-KRSHct7Ho</a
+            >
+          </p>
+          <p>
+            Image 'White box on white table' by Kelli McClintock, 2019, free
+            stock photo licensed under the
+            <a href="https://unsplash.com/license">Unsplash License</a>.
+            Downloaded from
+            <a href="https://unsplash.com/photos/GopRYASfsOc"
+              >https://unsplash.com/photos/GopRYASfsOc</a
+            >
+          </p>
+        </div>
       </div>
-      <p>Image 'A little piece of desk' by Davide Boscolo, 2019, free stock photo licensed under the </p>
     </footer>
   </body>
 </html>
