--- a/groupsite/Terms.html
+++ b/groupsite/Terms.html
@@ -108,7 +108,13 @@
                 When another user of the Service purchases such Sale Item, this is a “Sale Transaction”.
                </ol>
                <ol>iii. Payment for transactions must take place via our first party payment provider (the heckout of the websute), 
-                It is unsafe to make payments outside of the service.</ol>
+                It is unsafe to make payments outside of the service.Requesting, making or accepting payment for an item in any other way is a serious breach of the Terms of Service 
+                and may result in us suspending or terminating your access to the Service in accordance with section 8 of these Terms of Service.</ol>
+                <ol>
+                    iv. We want our Service to be a positive experience for our users and we ask that you honour the commitments you make to another user in respect of the swap, sale or purchase of a Sale Item.
+                    To safeguard the interests of our users, we do not recommend using the Service to swap Sale Items. However, if you choose to do so, you should follow our guidelines for swapping safely available here on our help site. 
+                    In any event, you acknowledge that you swap Sale Items entirely at your own risk and we have no liability in this respect.
+                </ol>
                
             </p>
            
@@ -123,9 +129,22 @@
 
            <div class="centered5">
             <article>
-            <h2>Ready for blast-off?</h2>
-            <p>Ready to brave outer-space? Test what you've learnt here with our very own quiz!  </p>
-            <li><a href="quizindex.html">Click here to launch!</a></li>
+            <h2>Ending our relationship</h2>
+            <p>
+              <ol>If at any time you decide you can no longer agree to these Terms of Service or any changes made to the Terms of Service or the Service, you must immediately stop using the Service. </ol>  
+              <ol>If you wish to end your use of the Service, please contact us at close@depop.com from the email address linked to your account and ask us to deactivate your Account. Where such request comes from someone who is not the account holder, we may ask you to provide proof of who you are and your relationship to the User in question, and any other documents we may reasonable require.
+
+              <ol> We may immediately end your use of the Service if you break the Rules of Acceptable Use, any other important rule(s), or terms and conditions we set for accessing and 
+                using the Service including these Terms of Service. If you wish to end your use of the Service, please contact us from the email address linked to your account and ask us to 
+                deactivate your Account. Where such request comes from someone who is not the account holder, we may ask you to provide proof of who you are and your relationship to the User in question, 
+                and any other documents we may reasonable require. </ol>
+             <ol> We may immediately end your use of the Service if you break the Rules of Acceptable Use, any other important rule(s), or terms and conditions we set for 
+                accessing and using the Service including these Terms of Service.</ol>
+             <ol> We may also withdraw the Service for any reason, without notice, at any time and without any liability to you.</ol>
+            <ol>If you or we end your use of the Service or we withdraw the Service as described in this clause, we may delete or modify your User Content, Account or any other information we hold about you. You will also lose any rights you have to use the
+                Service or access our content or your User Content. We will not offer you compensation for any losses. You should note that even if your Account is deactivated, some of your data may persist and appear within the Service, for example where your User Content has been re-shared by others. </ol>
+            </p>
+            <li><a href="home.html">Click here to return to the Home page</a></li>
            </article>
            </div>
         </div>
