home imgs change and add responsiveness

--- a/groupsite/home.html
+++ b/groupsite/home.html
@@ -76,23 +76,22 @@
          </div>
          <div id="tea">
             <div id="section2">
-               <div id="sellers">
-                  <div id="section2txtL">
-                     <h2><a href="sell/sell.html">For Students</a></h2>
-                     <p>Sell your stuff amoung thousands of other students</p>
-                  </div>
-                  <img id="nft1" src="./images/nfts/Comic book store by Mariel Rodriguez.jfif"
-                     alt="image of a cartoon style NFT">
-               </div>
-               <div id="buyers">
-                  <img id="nft2" src="./images/nfts/Gavin Parker - Art & Design.jfif" alt="image of a cartoon style NFT">
-                  <div id="section2txtR">
-                     <h2><a href="/buy.html">For Buyers</a></h2>
-                     <p>Buy from our many vendors</p>
-                  </div>
-               </div>
+              <div id="sellers" class="image-wrapper">
+                <div id="section2txtL">
+                  <h2><a href="buy.html"></a></h2>
+                </div>
+                <img id="nft1" src="./images/kelly-sikkema-Uh5GWNUGgGY-unsplash.jpg" alt="image of buy">
+              </div>
+              <div id="buyers" class="image-wrapper">
+                <img id="nft2" src="./images/kelly-sikkema-6vudIBHwLe8-unsplash.jpg" alt="image of sell">
+                <div id="section2txtR">
+                  <h2><a href="sell.html"></a></h2>
+                </div>
+              </div>
             </div>
-         </div>
+          </div>
+          
+          
       </main>
       <footer>
          <div class="footer-container">
