--- a/groupsite/buy.html
+++ b/groupsite/buy.html
@@ -8,15 +8,14 @@
     <script src="home.js"></script>
     <title>Brighton Bazaar</title>
   </head>
+
   <body>
     <main>
       <header>
         <div class="topbar">
           <div class="navigation">
-            <a href="home.html">Home</a>
-            <a class="active" href="#buy">Buy</a>
-            <a href="sell/sell.html">Sell</a>
-            <a href="login.php">Log In</a>
+            <a href="home.html">Home</a> <a class="active" href="#buy">Buy</a>
+            <a href="sell/sell.html">Sell</a> <a href="login.php">Log In</a>
             <a href="#signup" id="signup">Sign Up</a>
             <a href="basket.html" id="shopping-basket">
               <img
@@ -146,7 +145,10 @@
             <li><a href="home.html">Home</a></li>
             <li><a class="active" href="#buy">Buy</a></li>
             <li><a href="sell/sell.html">Sell</a></li>
-            <li><a href="contact/contact.html" onclick="openPopup(event)">Contact Us</a>
+            <li>
+              <a href="contact/contact.html" onclick="openPopup(event)"
+                >Contact Us</a
+              >
             </li>
           </ul>
         </div>
