--- a/groupsite/Terms.html
+++ b/groupsite/Terms.html
@@ -132,7 +132,7 @@
             <h2>Ending our relationship</h2>
             <p>
               <ol>If at any time you decide you can no longer agree to these Terms of Service or any changes made to the Terms of Service or the Service, you must immediately stop using the Service. </ol>  
-              <ol>If you wish to end your use of the Service, please contact us at close@depop.com from the email address linked to your account and ask us to deactivate your Account. Where such request comes from someone who is not the account holder, we may ask you to provide proof of who you are and your relationship to the User in question, and any other documents we may reasonable require.
+              <ol>If you wish to end your use of the Service, please contact us at from the email address linked to your account and ask us to deactivate your Account. Where such request comes from someone who is not the account holder, we may ask you to provide proof of who you are and your relationship to the User in question, and any other documents we may reasonable require.
 
               <ol> We may immediately end your use of the Service if you break the Rules of Acceptable Use, any other important rule(s), or terms and conditions we set for accessing and 
                 using the Service including these Terms of Service. If you wish to end your use of the Service, please contact us from the email address linked to your account and ask us to 
@@ -149,6 +149,23 @@
            </div>
         </div>
    </div>
+
+   <div id="article3" class="grid_12">
+    <div class="image6">
+        <a id="6"></a>
+
+        <div class="centered5">
+         <article>
+         <h2>Law and general provisions</h2>
+         <p>
+           <ol> As we are based in England, English law will apply to all disputes and the interpretation of these Terms of Service. The English courts will have non-exclusive jurisdiction over any dispute arising from or related to your use of the Service. These Terms of Service do not exclude any mandatory legal rights you may have or obligations Brighton Bazaar may have in your country of residence, 
+            where Brighton Bazaar is not allowed to exclude such as a matter of law. </ol>  
+         </p>
+         <li><a href="home.html">Click here to return to the Home page</a></li>
+        </article>
+        </div>
+     </div>
+</div>
 
 
    <div id="footer" class="grid_12">
