--- a/groupsite/basket.html
+++ b/groupsite/basket.html
@@ -29,10 +29,11 @@
             </a>
           </div>
         </div>
-      </div>
-      <div class="nav2">
-         <p><a href="electronics.html">Electronics</a> <a href="#">Basket</a></p>
-      </div>
+        <div class="nav2">
+          <p>
+            <a href="electronics.html">Electronics</a> <a href="#">Basket</a>
+          </p>
+        </div>
       </header>
       <div id="butter">
         <div id="loginsection">
@@ -166,7 +167,11 @@
             <li><a href="home.html">Home</a></li>
             <li><a href="buy.html">Buy</a></li>
             <li><a href="sell/sell.html">Sell</a></li>
-            <li><a href="contact/contact.html" onclick="openPopup(event)">Contact Us</a>
+            <li>
+              <a href="contact/contact.html" onclick="openPopup(event)"
+                >Contact Us</a
+              >
+            </li>
           </ul>
         </div>
         <div class="column company-name">
