--- a/groupsite/delivery_address.html
+++ b/groupsite/delivery_address.html
@@ -27,15 +27,13 @@
             </a>
           </div>
         </div>
-      </div>
-      <div class="nav2">
-        <p>
-           <a href="electronics.html">Electronics</a>
-           <a href="basket.html">Basket</a>
-           <a href="#">Delivery Address</a>
-        </p>
-     </div>
-     
+        <div class="nav2">
+          <p>
+            <a href="electronics.html">Electronics</a>
+            <a href="basket.html">Basket</a>
+            <a href="#">Delivery Address</a>
+          </p>
+        </div>
       </header>
       <div id="butter">
         <div id="loginsection">
@@ -121,11 +119,8 @@
           placeholder="Your post code.."
           required
         />
-        <button type="submit" name="submit-address">
-          Submit Address
-        </button>
+        <button type="submit" name="submit-address">Submit Address</button>
       </form>
-      
     </main>
     <footer>
       <div class="footer-container">
